# Tetris-Multiplayer

./: .gitignore  CMakeLists.txt  ClientManager.cpp  ClientManager.hpp  ClientNetworkManager.cpp  ClientNetworkManager.h  ClientNetworkManager.hpp  Makefile  NetworkManager.cpp  NetworkManager.h  NetworkManager.hpp  PacketType.hpp  README.md  ServerManager.cpp  ServerManager.hpp  ServerNetworkManager.cpp  ServerNetworkManager.h  ServerNetworkManager.hpp  Tetris-Client.sln  Tetris-Multiplayer.drawio  TetrisActions.hpp  TetrisClient.cpp  TetrisMultiplayer.cpp  TetrisMultiplayer.sln  TetrisMultiplayer.vcxproj  TetrisMultiplayer.vcxproj.filters  TetrisServer.cpp  all_code.txt  allcode.sh  class_general.puml  client.cpp  documentacao.excalidraw  ideias.excalidraw  main.cpp  o que fazer.txt  server-app  server.cpp  sfml-app  tetris.excalidraw  tetris_client_logic.puml  (+2 more)
Depois/: Makefile  client.cpp  server.cpp
Tetris-Server/: Server.cpp  Server.vcxproj  Server.vcxproj.filters  Tetris-Server.sln
Tetris-Server/enet-1.3.18/: win32.c
assets/shaders/: central_gradient.frag
include/: Screen.hpp  ServerManager.hpp  TetrisActions.hpp  baseTetromino.hpp  board.hpp  cell.hpp  gameManager.hpp  nonSymmetricTetromino.hpp  tetrominoFactory.hpp  tetrominos.hpp
include/client/: AudioManager.hpp  Background.hpp  Button.hpp  CellRenderer.hpp  ClientManager.hpp  Resizeable.hpp  Screen.hpp  TetrisCell.hpp  TextureLoader.hpp
include/client/renders/: BoardRenderer.hpp  CellRenderer.hpp  GameStatusRenderer.hpp  MiniBoardRenderer.hpp
include/client/screens/: BoardRenderer.hpp  BoardScreen.hpp  Button.hpp  EndGameScreen.hpp  GameScreen.hpp  InteractiveText.hpp  LobbyScreen.hpp  MenuScreen.hpp  MiniBoard.hpp  Screen.hpp  ScreenManager.hpp  WaitingConnectionScreen.hpp
include/common/: Cell.hpp  CellColor.hpp  CellColorType.hpp  Clock.hpp  Coordinate.hpp  Debuggable.hpp  EndGameData.hpp  GameData.hpp  GameStatus.hpp  ISerializable.hpp  Logger.hpp  NetworkManager.hpp  Packet.hpp  PacketSender.hpp  PacketType.hpp  PlayerData.hpp  PlayerList.hpp  SoundType.hpp  TetrisAction.hpp  TetrisBoard.hpp  Tetromino.hpp  TetrominoShape.hpp  ThreadSafeQueue.hpp
include/screens/: GameScreen.hpp  InteractiveText.hpp  MenuScreen.hpp
include/server/: Player.hpp  ServerManager.hpp  SoundSender.hpp
include/server/game/: BoardController.hpp  Cell.hpp  Game.hpp  GameCell.hpp  GameManager.hpp  GamePhysics.hpp  GravityManager.hpp  LevelData.hpp  TetrisBoard.hpp  TetrisBoardController.hpp  Tetromino.hpp  TetrominoController.hpp  TetrominoFactory.hpp  TetrominoManager.hpp  Tetrominos.hpp  baseTetromino.hpp  board.hpp  cell.hpp  gameManager.hpp  nonSymmetricTetromino.hpp  tetrominoFactory.hpp  tetrominos.hpp
server-client/: PacketType.hpp  ServerManager.cpp
single-player-tetris/include/: tetrominos.hpp
single-player/include/: cell.hpp  gameManager.hpp  nonSymmetricTetromino.hpp
src/: ClientManager.cpp  TetrisClient.cpp  TetrisServer.cpp  baseTetromino.cpp  board.cpp  cell.cpp  gameManager.cpp  main.cpp
src/client/: AudioManager.cpp  CellRenderer.cpp  ClientManager.cpp  Screen.cpp  ScreenManager.cpp  TetrisClient.cpp
src/client/renders/: BoardRenderer.cpp  CellRenderer.cpp  GameStatusRender.cpp  GameStatusRenderer.cpp  MiniBoardRenderer.cpp
src/client/screens/: BoardRenderer.cpp  BoardScreen.cpp  Button.cpp  EndGameScreen.cpp  GameScreen.cpp  LobbyScreen.cpp  MenuScreen.cpp  MiniBoard.cpp  Screen.cpp  ScreenManager.cpp  WaitingConnectionScreen.cpp
src/common/: Cell.cpp  Debuggable.cpp  EndGameData.cpp  Logger.cpp  NetworkManager.cpp  PlayerData.cpp  PlayerList.cpp  TetrisBoard.cpp  Tetromino.cpp
src/server/: ServerManager.cpp  TetrisServer.cpp
src/server/game/: BoardController.cpp  Cell.cpp  Game.cpp  GameCell.cpp  GameManager.cpp  GamePhysics.cpp  TetrisBoard.cpp  TetrisBoardController.cpp  Tetromino.cpp  TetrominoController.cpp  TetrominoFactory.cpp  TetrominoManager.cpp  baseTetromino.cpp  board.cpp  cell.cpp  gameManager.cpp
uml/: all.puml  client.puml  common.puml  server.puml
